release carrier on Object.wait