@@ -21,21 +21,96 @@
  * questions.
  */
 
-/**
- * @test
+/*
+ * @test id=default
  * @summary Test virtual threads using Object.wait/notifyAll
+ * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64"
  * @modules java.base/java.lang:+open
  * @library /test/lib
- * @run junit MonitorWaitNotify
+ * @run junit/othervm --enable-native-access=ALL-UNNAMED MonitorWaitNotify
  */
 
+/*
+ * @test id=LM_LEGACY
+ * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64"
+ * @modules java.base/java.lang:+open
+ * @library /test/lib
+ * @run junit/othervm -XX:LockingMode=1 --enable-native-access=ALL-UNNAMED MonitorWaitNotify
+ */
+
+/*
+ * @test id=LM_LIGHTWEIGHT
+ * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64"
+ * @modules java.base/java.lang:+open
+ * @library /test/lib
+ * @run junit/othervm -XX:LockingMode=2 --enable-native-access=ALL-UNNAMED MonitorWaitNotify
+ */
+
+/*
+ * @test id=Xint-LM_LEGACY
+ * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64"
+ * @modules java.base/java.lang:+open
+ * @library /test/lib
+ * @run junit/othervm -Xint -XX:LockingMode=1 --enable-native-access=ALL-UNNAMED MonitorWaitNotify
+ */
+
+/*
+ * @test id=Xint-LM_LIGHTWEIGHT
+ * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64"
+ * @modules java.base/java.lang:+open
+ * @library /test/lib
+ * @run junit/othervm -Xint -XX:LockingMode=2 --enable-native-access=ALL-UNNAMED MonitorWaitNotify
+ */
+
+/*
+ * @test id=Xcomp-TieredStopAtLevel1-LM_LEGACY
+ * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64"
+ * @modules java.base/java.lang:+open
+ * @library /test/lib
+ * @run junit/othervm -Xcomp -XX:TieredStopAtLevel=1 -XX:LockingMode=1 --enable-native-access=ALL-UNNAMED MonitorWaitNotify
+ */
+
+/*
+ * @test id=Xcomp-TieredStopAtLevel1-LM_LIGHTWEIGHT
+ * @modules java.base/java.lang:+open
+ * @library /test/lib
+ * @run junit/othervm -Xcomp -XX:TieredStopAtLevel=1 -XX:LockingMode=2 --enable-native-access=ALL-UNNAMED MonitorWaitNotify
+ */
+
+/*
+ * @test id=Xcomp-noTieredCompilation-LM_LEGACY
+ * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64"
+ * @modules java.base/java.lang:+open
+ * @library /test/lib
+ * @run junit/othervm -Xcomp -XX:-TieredCompilation -XX:LockingMode=1 --enable-native-access=ALL-UNNAMED MonitorWaitNotify
+ */
+
+/*
+ * @test id=Xcomp-noTieredCompilation-LM_LIGHTWEIGHT
+ * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64"
+ * @modules java.base/java.lang:+open
+ * @library /test/lib
+ * @run junit/othervm -Xcomp -XX:-TieredCompilation -XX:LockingMode=2 --enable-native-access=ALL-UNNAMED MonitorWaitNotify
+ */
+
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Stream;
+import java.util.stream.Collectors;
+
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.locks.LockSupport;
 
 import jdk.test.lib.thread.VThreadRunner;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import static org.junit.jupiter.api.Assertions.*;
 
 class MonitorWaitNotify {
@@ -131,6 +206,7 @@ class MonitorWaitNotify {
                 } catch (InterruptedException e) {
                     // interrupt status should be cleared
                     assertFalse(t.isInterrupted());
+                    validateStackTrace(e.getStackTrace());
                 }
             }
         });
@@ -152,6 +228,7 @@ class MonitorWaitNotify {
                 } catch (InterruptedException e) {
                     // interrupt status should be cleared
                     assertFalse(t.isInterrupted());
+                    validateStackTrace(e.getStackTrace());
                 }
             }
         });
@@ -187,6 +264,7 @@ class MonitorWaitNotify {
                     lock.wait();
                 } catch (InterruptedException e) {
                     interruptedException.set(true);
+                    validateStackTrace(e.getStackTrace());
                 }
             }
         });
@@ -234,6 +312,39 @@ class MonitorWaitNotify {
         vthread.join();
         assertFalse(interruptedException.get());
         assertTrue(vthread.isInterrupted());
+    }
+
+    /**
+     * Test Object.wait with recursive locking.
+     */
+    @Test
+    void testRecursive() throws Exception {
+        var lock = new Object();
+        var started = new CountDownLatch(1);
+        var vthread = Thread.ofVirtual().start(() -> {
+            started.countDown();
+            synchronized (lock) {
+                synchronized (lock) {
+                    synchronized (lock) {
+                        try {
+                            lock.wait();
+                        } catch (InterruptedException e) {
+                        }
+                    }
+                }
+            }
+        });
+
+        // wait for thread to start and wait
+        started.await();
+        await(vthread, Thread.State.WAITING);
+
+        // notify, thread should block waiting to reenter
+        synchronized (lock) {
+            lock.notifyAll();
+            await(vthread, Thread.State.BLOCKED);
+        }
+        vthread.join();
     }
 
     /**
@@ -316,6 +427,161 @@ class MonitorWaitNotify {
     }
 
     /**
+     * Test that Object.wait releases the carrier.
+     */
+    @Test
+    void testReleaseOnWait() throws Exception {
+        assertTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
+        try (ExecutorService scheduler = Executors.newFixedThreadPool(1)) {
+            Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
+
+            var lock = new Object();
+            var started = new CountDownLatch(1);
+            var completed = new AtomicBoolean();
+
+            var vthread1 = builder.start(() -> {
+                started.countDown();
+                synchronized (lock) {
+                    try {
+                        lock.wait();
+                    } catch (InterruptedException e) {
+                        fail("wait interrupted");
+                    }
+                }
+                completed.set(true);
+            });
+
+            // wait for vthread1 to start and wait
+            started.await();
+            await(vthread1, Thread.State.WAITING);
+
+            // carrier should be released, use it for another thread
+            var executed = new AtomicBoolean();
+            var vthread2 = builder.start(() -> {
+                executed.set(true);
+            });
+            vthread2.join();
+            assertTrue(executed.get());
+
+            // wakeup vthread1
+            synchronized (lock) {
+                lock.notifyAll();
+            }
+
+            vthread1.join();
+            assertTrue(completed.get());
+        }
+    }
+
+    /**
+     * Test that Object.wait releases the carrier with multiple threads
+     */
+    @Test
+    void testMultipleReleaseOnWait() throws Exception {
+        int VTHREAD_COUNT = 4 * Runtime.getRuntime().availableProcessors();
+        CountDownLatch latch = new CountDownLatch(VTHREAD_COUNT);
+        Object object = new Object();
+        AtomicInteger counter = new AtomicInteger(0);
+
+        for (int i = 0; i < VTHREAD_COUNT; i++) {
+            int vthreadIndex = i;
+            Thread.ofVirtual().name("Vthread-" + i).start(() -> {
+                synchronized (object) {
+                    if (counter.incrementAndGet() == VTHREAD_COUNT) {
+                      object.notifyAll();
+                    } else {
+                      try {
+                        object.wait();
+                      } catch (InterruptedException e) {}
+                    }
+                }
+                latch.countDown();
+            });
+        }
+        latch.await();
+    }
+
+    /**
+     * Test that Object.wait releases the carrier.
+     */
+    @Test
+    void testReleaseOnTimedWait() throws Exception {
+        assertTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
+        try (ExecutorService scheduler = Executors.newFixedThreadPool(1)) {
+            Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
+
+            var lock = new Object();
+            var started = new CountDownLatch(1);
+            var completed = new AtomicBoolean();
+
+            var vthread1 = builder.start(() -> {
+                started.countDown();
+                synchronized (lock) {
+                    try {
+                        lock.wait(5000);
+                    } catch (InterruptedException e) {
+                        fail("wait interrupted");
+                    }
+                }
+                completed.set(true);
+            });
+
+            // wait for vthread1 to start and wait
+            started.await();
+            await(vthread1, Thread.State.TIMED_WAITING);
+
+            // carrier should be released, use it for another thread
+            var executed = new AtomicBoolean();
+            var vthread2 = builder.start(() -> {
+                executed.set(true);
+            });
+            vthread2.join();
+            assertTrue(executed.get());
+
+            // wakeup vthread1
+            synchronized (lock) {
+                lock.notifyAll();
+            }
+
+            vthread1.join();
+            assertTrue(completed.get());
+        }
+    }
+
+    static Stream<Arguments> waitingTimes() {
+        return Stream.of(1, 10, 100, 250, 500, 1000).map(t -> Arguments.of(t));
+    }
+
+    /**
+     * Test that Object.wait releases the carrier with multiple threads
+     */
+    @ParameterizedTest
+    @MethodSource("waitingTimes")
+    void testMultipleReleaseOnTimedWait(long waitingTime) throws Exception {
+        int VTHREAD_COUNT = 4 * Runtime.getRuntime().availableProcessors();
+        CountDownLatch latch = new CountDownLatch(VTHREAD_COUNT);
+        Object object = new Object();
+        AtomicInteger counter = new AtomicInteger(0);
+
+        for (int i = 0; i < VTHREAD_COUNT; i++) {
+            int vthreadIndex = i;
+            Thread.ofVirtual().name("Vthread-" + i).start(() -> {
+                synchronized (object) {
+                    if (counter.incrementAndGet() == VTHREAD_COUNT) {
+                      object.notifyAll();
+                    } else {
+                      try {
+                        object.wait(waitingTime);
+                      } catch (InterruptedException e) {}
+                    }
+                }
+                latch.countDown();
+            });
+        }
+        latch.await();
+    }
+
+    /**
      * Test that wait(long) throws IAE when timeout is negative.
      */
     @Test
@@ -369,5 +635,11 @@ class MonitorWaitNotify {
             }
         };
         new Thread(interruptTask).start();
+    }
+
+    private static void validateStackTrace(StackTraceElement[] stackTrace) {
+        List<String> expected = Arrays.asList("wait0", "wait", "run");
+        List<String> actual = Stream.of(stackTrace).map(f -> f.getMethodName()).collect(Collectors.toList());
+        expected.stream().forEach(m -> assertTrue(actual.contains(m), "Method " + m + " not in stack trace"));
     }
 }
